# tech_assessment_prescientai

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
docs/: architecture-diagram.md
src/weather_etl/: __init__.py  __main__.py
src/weather_etl/common/: __init__.py  config.py  logger.py  rate_limit.py
src/weather_etl/ingestion/: openweather_client.py
src/weather_etl/ingestion/models/: types.py
src/weather_etl/ingestion/ops/: __init__.py  normalize.py  postgres_loader.py
src/weather_etl/ingestion/ops/load/: __init__.py
src/weather_etl/ingestion/ops/transform/: __init__.py
src/weather_etl/sql/: schema.sql
tests/: test_normalize.py  test_openweather_client.py
