[project]
name = "weather_etl"
version = "0.1.0"
description = "OpenWeather ETL pipeline for El Colorado tourism planning"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "psycopg[binary]>=3.2.10",
    "typer>=0.24.1",
]

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "pytest>=8.4.2",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.0",
]

[project.scripts]
weather-etl = "weather_etl.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["src/weather_etl"]

[tool.hatch.build.targets.wheel.sources]
"src/weather_etl" = "weather_etl"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
